Fixed text-crop selector for an invalid property name from overflow-text to text-overflow

--- a/core/layout/state.less
+++ b/core/layout/state.less
@@ -112,7 +112,7 @@
 .text-crop {
     overflow: hidden @important;
     white-space: nowrap @important;
-    overflow-text: ellipsis @important;
+    text-overflow: ellipsis @important;
 }
 
 .uppercase {
